Fix .dropdown-item's to wrap to match spec, part 2

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -140,6 +140,7 @@
   color: $dropdown-link-color;
   text-align: inherit; // For `<button>`s
   text-decoration: if($link-decoration == none, null, none);
+  white-space: normal;
   background-color: transparent; // For `<button>`s
   border: 0; // For `<button>`s
 
